mysite/static/css/style.css
@font-face {
    font-family: 'Actionman';
    src: url("../fonts/actionman.ttf");
}


body {
    background: rgb(244, 244, 244);
    background: linear-gradient(0deg, rgba(244, 244, 244, 1) 21%, rgba(236, 254, 255, 1) 54%, rgba(219, 253, 255, 1) 100%);
    background-size: contain;
    background-position: center;
    background-attachment: fixed;
    background-repeat: no-repeat;
    text-align: center;
    margin: auto;
    margin-top: 150px;
    font-family: "PT Sans", sans-serif;
}

.page {
    text-align: center;
    max-width: 1000px;
    margin: auto;
    margin-top: 50px;
    margin-bottom: 50px;
    padding: 10px;
    padding-bottom: 50px;
    background-color: #f4f4f4;
    background-position: 0 90%;
    background-repeat: repeat no-repeat;
    background-size: 4px 3px;
    border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
    border-style: solid;
    border-width: 2px;
    box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
    box-sizing: border-box;
    color: #333c57;
    border-bottom-left-radius: 15px 255px;
    border-bottom-right-radius: 225px 15px;
    border-top-left-radius: 255px 15px;
    border-top-right-radius: 15px 225px;
}

.footer {
    padding: 10px;
    background-color: #f4f4f4;
    background-position: 0 90%;
    background-repeat: repeat no-repeat;
    background-size: 4px 3px;
    border-style: solid;
    border-width: 2px;
    color: #333c57;
    border-top-left-radius: 255px 15px;
    border-top-right-radius: 15px 225px;
}

h1 {
    font-family: Actionman;
    color: #f4f4f4;
    font-size: 75px;
    -webkit-text-stroke: 1px #333c57;
    text-shadow: 0 5px 0px #333c57;
    font-weight: bold;
    line-height: 0%;
}

h2 {
    font-family: Actionman;
    color: white;
    font-size: 50px;
    -webkit-text-stroke: 1px #333c57;
    text-shadow: 0 3px 0px #333c57;
    font-weight: bolder;
}

h3 {
    font-family: Actionman;
    color: white;
    font-size: 40px;
    -webkit-text-stroke: 1px #333c57;
    text-shadow: 0 1px 0px #333c57;
    font-weight: bolder;
}

/* ---- NAVBAR ---- */

.topnav {
    position: fixed;
    top: 0;

    width: calc(100% - 20px);
    margin: 10px;

    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    color: #333c57;

    background-color: #f4f4f4;
    background-position: 0 90%;
    background-repeat: repeat no-repeat;
    background-size: 4px 3px;

    border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
    border-style: solid;
    border-width: 2px;
    border-color: #333c57;

    box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
    box-sizing: border-box;

    border-bottom-left-radius: 15px 255px;
    border-bottom-right-radius: 225px 15px;
    border-top-left-radius: 255px 15px;
    border-top-right-radius: 15px 225px;
}

.topnav-center {
    order: 2;
}

.topnav-right {
    order: 3;
}

.topnav-left {
    order: 1;
}

.topnav-brand {
    color: #333c57;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 20px;
    list-style-type: none;
}

.nav-link {
    color: #333c57;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 18px;
    list-style-type: none;
}

.topnav a:hover {
    text-shadow: 1px 1px 10px white;
}

.topnav a.active {
    color: white;
}

.account-img {
    height: 50px;
    width: 50px;
    border-style: solid;
    border-width: 2px;
    border-color: #333c57;
    border-bottom-left-radius: 50px 45px;
    border-bottom-right-radius: 45px 50px;
    border-top-left-radius: 45px 50px;
    border-top-right-radius: 50px 45px;
}


/* ---- INPUTS ----*/

input {
    background-color: #f4f4f4;
    background-position: 0 90%;
    background-repeat: repeat no-repeat;
    background-size: 4px 3px;
    border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
    border-style: solid;
    border-width: 2px;
    box-sizing: border-box;
    border-color: #333c57;
    color: #333c57;
    cursor: pointer;
    display: inline-block;
    font-family: Neucha, sans-serif;
    font-size: 1rem;
    line-height: 23px;
    outline: none;
    padding: .75rem;
    text-decoration: none;
    border-bottom-left-radius: 15px 255px;
    border-bottom-right-radius: 225px 15px;
    border-top-left-radius: 255px 15px;
    border-top-right-radius: 15px 225px;
}

button {
    align-self: center;
    background-color: #f4f4f4;
    background-position: 0 90%;
    background-repeat: repeat no-repeat;
    background-size: 4px 3px;
    border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
    border-style: solid;
    border-color: #333c57;
    border-width: 2px;
    box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
    box-sizing: border-box;
    color: #333c57;
    cursor: pointer;
    display: inline-block;
    font-size: 1rem;
    line-height: 23px;
    outline: none;
    padding: .75rem;
    text-decoration: none;
    transition: all 235ms ease-in-out;
    border-bottom-left-radius: 15px 255px;
    border-bottom-right-radius: 225px 15px;
    border-top-left-radius: 255px 15px;
    border-top-right-radius: 15px 225px;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
}

button:hover {
    box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
    transform: translate3d(0, 2px, 0);
}

button:focus {
    box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
}

button:disabled {
    color: #333c57;
    background-color: #c0c0c0;
    box-shadow: none;
}

button:disabled:hover {
    box-shadow: none;
    transform: none;
    cursor: default;
}

.primarybutton {
    transition: all 235ms ease-in-out;
    color: #333c57;
    box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
    background: rgb(178, 244, 249);
    background: linear-gradient(0deg, rgba(178, 244, 249, 1) 7%, rgba(213, 249, 251, 1) 57%);
}

.primarybutton:hover {
    box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
    transform: translate3d(0, 2px, 0);
}

/* ---- SEGMENTED BUTTON ---- */

.segmented-button {
    display: flex;
    margin: 0 auto;
    position: relative;
    overflow: hidden;

    padding: 5px;

    align-self: center;
    background-color: #f4f4f4;
    background-position: 0 90%;
    background-repeat: repeat no-repeat;
    background-size: 4px 3px;
    border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
    border-style: solid;
    border-width: 2px;
    box-sizing: border-box;
    color: #333c57;
    cursor: pointer;
    display: inline-block;
    font-size: 1rem;
    line-height: 23px;
    outline: none;
    text-decoration: none;
    border-bottom-left-radius: 15px 255px;
    border-bottom-right-radius: 225px 15px;
    border-top-left-radius: 255px 15px;
    border-top-right-radius: 15px 225px;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
}

.segmented-button input {
    position: absolute !important;
    height: 1px;
    width: 1px;
    overflow: hidden;
    clip: rect(1px 1px 1px 1px);
}

.segmented-button label {
    grid-row: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    cursor: pointer;
    flex: 1 1 0px;
    position: relative;
    z-index: 2;

    align-self: center;
    display: inline-block;
    padding: .75rem;
}

.segmented-button input:checked+label {
    font-weight: 600;

    background-color: #f4f4f4;
    background-position: 0 90%;
    background-repeat: repeat no-repeat;
    background-size: 4px 3px;

    border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
    border-style: solid;
    border-width: 2px;

    box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
    box-sizing: border-box;

    border-bottom-left-radius: 15px 255px;
    border-bottom-right-radius: 225px 15px;
    border-top-left-radius: 255px 15px;
    border-top-right-radius: 15px 225px;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
}

.segmented-button label:hover {
    font-weight: 600;
}

/* --- FILE UPLOAD ---- */

input[type=file] {
    text-align: center;
    line-height: 52px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.custom-file-input::-webkit-file-upload-button {
    border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
    border-style: solid;
    border-width: 2px;
    border-color: #333c57;
    background-color: #f4f4f4;
    background-position: 0 90%;
    background-repeat: repeat no-repeat;
    background-size: 4px 3px;
    border-bottom-left-radius: 15px 255px;
    border-bottom-right-radius: 225px 15px;
    border-top-left-radius: 255px 15px;
    border-top-right-radius: 15px 225px;
}

.custom-file-input::before {
    content: 'Select or Drop';
    display: block;
    text-align: center;
    margin: 0 auto;
}

/* ---- DROPDOWN ---- */

select {

    background-color: #f4f4f4;
    background-position: 0 90%;
    background-repeat: repeat no-repeat;
    background-size: 4px 3px;

    border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
    border-style: solid;
    border-width: 2px;
    border-color: #333c57;

    box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
    box-sizing: border-box;

    border-bottom-left-radius: 15px 255px;
    border-bottom-right-radius: 225px 15px;
    border-top-left-radius: 255px 15px;
    border-top-right-radius: 15px 225px;
}

/* ---- TABLE ---- */

.table {
    width: 700px;
    font-size: xx-large;
    border-collapse: collapse;
    margin: auto;
}

.leaderboard-table {
    width: 100%;
}

.table th,
.table td {
    padding: 12px 10px;
}

.table th {
    text-align: left;
    font-size: 0.6em;
}

.table tbody tr td {
    padding: 10px;
}

.table tbody tr td a {
    text-decoration: none;
    color: #333;
    -webkit-text-stroke: initial;
}


.table tbody tr:last-child {
    border-top: 1px solid black;
}

.leaderboardtype {
    margin-bottom: 3%;
}

p.title {
    margin: 0;
    font-size: 0.36em;
    text-shadow: none;
    -webkit-text-stroke: initial;
    color: black !important;
    border-radius: 10px;
    width: 100%;
    text-align: left !important;
}

.name-box {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    height: 48px;
    max-height: 48px;
    overflow: hidden;
}

.name-box img {
    object-fit: fill;
    margin-right: 20px !important;
    height: 50px;
    width: 50px;
    border-style: solid;
    border-width: 2px;
    border-color: #333c57;
    border-bottom-left-radius: 50px 45px;
    border-bottom-right-radius: 45px 50px;
    border-top-left-radius: 45px 50px;
    border-top-right-radius: 50px 45px;
}

.name-box div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: left;
    width: 100%;
}

/* ---- CAROUSEL ---- */

.carousel {
    height: 500px;
    max-height: 500px;
    overflow: hidden;
    align-content: center;
    padding-bottom: 50px;
}

.slide {
    object-fit: cover;
    height: 450px;
    width: 100px;
    cursor: pointer;
    transition: all 0.5s;

    vertical-align: middle;

    border-style: solid;
    border-width: 2px;
    border-color: #333c57;
    box-sizing: border-box;

    border-bottom-left-radius: 50px 500px;
    border-bottom-right-radius: 50px 500px;
    border-top-left-radius: 500px 50px;
    border-top-right-radius: 500px 50px;
}

.slide:hover {
    width: 150px;
    height: 460px;
    box-shadow: rgba(0, 0, 0, .2) 10px 15px 15px -10px;
}

.slide.expanded {
    width: 600px;
    height: 500px;

    border-bottom-left-radius: 15px 250px;
    border-bottom-right-radius: 15px 250px;
    border-top-left-radius: 250px 15px;
    border-top-right-radius: 250px 15px;

    box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
}

